--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -3628,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3654,7 +3654,9 @@
        "      <th></th>\n",
        "      <th>region</th>\n",
        "      <th>popular_beers</th>\n",
+       "      <th>total_counts</th>\n",
        "      <th>counts_pop_beers</th>\n",
+       "      <th>percentage_pop_beers</th>\n",
        "      <th>rating_pop_beers</th>\n",
        "      <th>rank</th>\n",
        "      <th>popular_styles</th>\n",
@@ -3667,7 +3669,9 @@
        "      <th>0</th>\n",
        "      <td>US</td>\n",
        "      <td>Brooklyn Black Chocolate Stout</td>\n",
+       "      <td>27121.0</td>\n",
        "      <td>163.0</td>\n",
+       "      <td>0.006010</td>\n",
        "      <td>0.564417</td>\n",
        "      <td>1</td>\n",
        "      <td>India Pale Ale (IPA)</td>\n",
@@ -3678,7 +3682,9 @@
        "      <th>1</th>\n",
        "      <td>US</td>\n",
        "      <td>Rochefort Trappistes 10</td>\n",
+       "      <td>27121.0</td>\n",
        "      <td>66.0</td>\n",
+       "      <td>0.002434</td>\n",
        "      <td>0.533333</td>\n",
        "      <td>2</td>\n",
        "      <td>Imperial IPA</td>\n",
@@ -3689,7 +3695,9 @@
        "      <th>2</th>\n",
        "      <td>US</td>\n",
        "      <td>AleSmith Speedway Stout</td>\n",
+       "      <td>27121.0</td>\n",
        "      <td>182.0</td>\n",
+       "      <td>0.006711</td>\n",
        "      <td>0.521368</td>\n",
        "      <td>3</td>\n",
        "      <td>American Pale Ale</td>\n",
@@ -3700,7 +3708,9 @@
        "      <th>3</th>\n",
        "      <td>South America</td>\n",
        "      <td>Sul Americana</td>\n",
+       "      <td>95.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>0.021053</td>\n",
        "      <td>0.605000</td>\n",
        "      <td>1</td>\n",
        "      <td>American IPA</td>\n",
@@ -3711,41 +3721,267 @@
        "      <th>4</th>\n",
        "      <td>South America</td>\n",
        "      <td>Stout Porter</td>\n",
+       "      <td>95.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>0.021053</td>\n",
        "      <td>0.435000</td>\n",
        "      <td>2</td>\n",
        "      <td>English Porter</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.595000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South America</td>\n",
+       "      <td>Falke Tripel Monasterium</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.021053</td>\n",
+       "      <td>0.285000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>American Double / Imperial IPA</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.343333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>Brooklyn Black Chocolate Stout</td>\n",
+       "      <td>5875.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.002553</td>\n",
+       "      <td>0.651833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Saison / Farmhouse Ale</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>0.630000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>Rochefort Trappistes 10</td>\n",
+       "      <td>5875.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.001191</td>\n",
+       "      <td>0.622222</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Sour/Wild Ale</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>0.622222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>Cantillon Rosé De Gambrinus</td>\n",
+       "      <td>5875.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.001021</td>\n",
+       "      <td>0.577778</td>\n",
+       "      <td>3</td>\n",
+       "      <td>American Wild Ale</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>0.620000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Rochefort Trappistes 10</td>\n",
+       "      <td>5123.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.003123</td>\n",
+       "      <td>0.622222</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Golden Ale/Blond Ale</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>0.755556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Trappistes Rochefort 10</td>\n",
+       "      <td>5123.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.005466</td>\n",
+       "      <td>0.620000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>American IPA</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>0.712500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Efes Pilsen (Pilsener)</td>\n",
+       "      <td>5123.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.001757</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Bitter</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>0.622222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Delirium Tremens</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.017857</td>\n",
+       "      <td>0.688889</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bitter</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Erdinger Pikantus</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.017857</td>\n",
+       "      <td>0.622222</td>\n",
+       "      <td>2</td>\n",
+       "      <td>American Blonde Ale</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.643333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Weihenstephaner Festbier</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.053571</td>\n",
+       "      <td>0.612500</td>\n",
+       "      <td>3</td>\n",
+       "      <td>American IPA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.600833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Alpha Pale Ale</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.011236</td>\n",
+       "      <td>0.585000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pilsener</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Bridge Road Australian Ale</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.011236</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>2</td>\n",
+       "      <td>English Pale Ale</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.697143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Australian Ale</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.011236</td>\n",
+       "      <td>0.495000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Spice/Herb/Vegetable</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Léopold 7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.942500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Belgian Pale Ale</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.942500</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          region                   popular_beers  counts_pop_beers  \\\n",
-       "0             US  Brooklyn Black Chocolate Stout             163.0   \n",
-       "1             US         Rochefort Trappistes 10              66.0   \n",
-       "2             US         AleSmith Speedway Stout             182.0   \n",
-       "3  South America                   Sul Americana               2.0   \n",
-       "4  South America                    Stout Porter               2.0   \n",
+       "           region                   popular_beers  total_counts  \\\n",
+       "0              US  Brooklyn Black Chocolate Stout       27121.0   \n",
+       "1              US         Rochefort Trappistes 10       27121.0   \n",
+       "2              US         AleSmith Speedway Stout       27121.0   \n",
+       "3   South America                   Sul Americana          95.0   \n",
+       "4   South America                    Stout Porter          95.0   \n",
+       "5   South America        Falke Tripel Monasterium          95.0   \n",
+       "6   North America  Brooklyn Black Chocolate Stout        5875.0   \n",
+       "7   North America         Rochefort Trappistes 10        5875.0   \n",
+       "8   North America     Cantillon Rosé De Gambrinus        5875.0   \n",
+       "9          Europe         Rochefort Trappistes 10        5123.0   \n",
+       "10         Europe         Trappistes Rochefort 10        5123.0   \n",
+       "11         Europe          Efes Pilsen (Pilsener)        5123.0   \n",
+       "12      Australia                Delirium Tremens          56.0   \n",
+       "13      Australia               Erdinger Pikantus          56.0   \n",
+       "14      Australia        Weihenstephaner Festbier          56.0   \n",
+       "15           Asia                  Alpha Pale Ale          89.0   \n",
+       "16           Asia      Bridge Road Australian Ale          89.0   \n",
+       "17           Asia                  Australian Ale          89.0   \n",
+       "18         Africa                       Léopold 7           1.0   \n",
        "\n",
-       "   rating_pop_beers  rank        popular_styles  counts_pop_styles  \\\n",
-       "0          0.564417     1  India Pale Ale (IPA)             1138.0   \n",
-       "1          0.533333     2          Imperial IPA              581.0   \n",
-       "2          0.521368     3     American Pale Ale              538.0   \n",
-       "3          0.605000     1          American IPA               16.0   \n",
-       "4          0.435000     2        English Porter                5.0   \n",
+       "    counts_pop_beers  percentage_pop_beers  rating_pop_beers  rank  \\\n",
+       "0              163.0              0.006010          0.564417     1   \n",
+       "1               66.0              0.002434          0.533333     2   \n",
+       "2              182.0              0.006711          0.521368     3   \n",
+       "3                2.0              0.021053          0.605000     1   \n",
+       "4                2.0              0.021053          0.435000     2   \n",
+       "5                2.0              0.021053          0.285000     3   \n",
+       "6               15.0              0.002553          0.651833     1   \n",
+       "7                7.0              0.001191          0.622222     2   \n",
+       "8                6.0              0.001021          0.577778     3   \n",
+       "9               16.0              0.003123          0.622222     1   \n",
+       "10              28.0              0.005466          0.620000     2   \n",
+       "11               9.0              0.001757          0.555556     3   \n",
+       "12               1.0              0.017857          0.688889     1   \n",
+       "13               1.0              0.017857          0.622222     2   \n",
+       "14               3.0              0.053571          0.612500     3   \n",
+       "15               1.0              0.011236          0.585000     1   \n",
+       "16               1.0              0.011236          0.555556     2   \n",
+       "17               1.0              0.011236          0.495000     3   \n",
+       "18               1.0              1.000000          0.942500     1   \n",
        "\n",
-       "   rating_pop_styles  \n",
-       "0           0.688889  \n",
-       "1           0.607407  \n",
-       "2           0.566667  \n",
-       "3           0.715000  \n",
-       "4           0.595000  "
+       "                    popular_styles  counts_pop_styles  rating_pop_styles  \n",
+       "0             India Pale Ale (IPA)             1138.0           0.688889  \n",
+       "1                     Imperial IPA              581.0           0.607407  \n",
+       "2                American Pale Ale              538.0           0.566667  \n",
+       "3                     American IPA               16.0           0.715000  \n",
+       "4                   English Porter                5.0           0.595000  \n",
+       "5   American Double / Imperial IPA               15.0           0.343333  \n",
+       "6           Saison / Farmhouse Ale              310.0           0.630000  \n",
+       "7                    Sour/Wild Ale              195.0           0.622222  \n",
+       "8                American Wild Ale              169.0           0.620000  \n",
+       "9             Golden Ale/Blond Ale              119.0           0.755556  \n",
+       "10                    American IPA              236.0           0.712500  \n",
+       "11                          Bitter              121.0           0.622222  \n",
+       "12                          Bitter                1.0           0.666667  \n",
+       "13             American Blonde Ale                3.0           0.643333  \n",
+       "14                    American IPA                5.0           0.600833  \n",
+       "15                        Pilsener                3.0           0.733333  \n",
+       "16                English Pale Ale                7.0           0.697143  \n",
+       "17            Spice/Herb/Vegetable                3.0           0.666667  \n",
+       "18                Belgian Pale Ale                1.0           0.942500  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3754,7 +3990,21 @@
     "# extract the top 3 most popular beers and styles for each region\n",
     "# Get the top 3 most popular beers in each region\n",
     "top_beers_ba = (ratings_users_ba.groupby('region')['beer_name'].value_counts().groupby(level=0).head(3).rename('counts_ba').reset_index())\n",
+    "# get the total number of ratings in each region\n",
+    "total_counts_per_region_ba = ratings_users_ba.groupby('region')['date'].count().reset_index().rename(columns={'date': 'total_counts_ba'})\n",
+    "top_beers_ba = top_beers_ba.merge(total_counts_per_region_ba, on='region')\n",
+    "top_beers_ba['percentage_ba'] = top_beers_ba['counts_ba'] / top_beers_ba['total_counts_ba']\n",
+    "top_beers_ba\n",
+    "\n",
     "top_beers_rb = (ratings_users_rb.groupby('region')['beer_name'].value_counts().groupby(level=0).head(3).rename('counts_rb').reset_index())\n",
+    "total_counts_per_region_rb = ratings_users_rb.groupby('region')['date'].count().reset_index().rename(columns={'date': 'total_counts_rb'})\n",
+    "top_beers_rb = top_beers_rb.merge(total_counts_per_region_rb, on='region')\n",
+    "top_beers_rb['percentage_rb'] = top_beers_rb['counts_rb'] / top_beers_rb['total_counts_rb']\n",
+    "total_counts_per_region = total_counts_per_region_rb.merge(total_counts_per_region_ba, on='region',how='outer')\n",
+    "total_counts_per_region['total_counts_ba'].fillna(0, inplace=True)\n",
+    "total_counts_per_region['total_counts_rb'].fillna(0, inplace=True)\n",
+    "total_counts_per_region['total_counts'] = total_counts_per_region['total_counts_ba'] + total_counts_per_region['total_counts_rb']\n",
+    "total_counts_per_region.drop(columns=['total_counts_ba', 'total_counts_rb'], inplace=True)\n",
     "\n",
     "# get the average rating of the top 3 beers in each region\n",
     "top_beers_ba[\"rating\"] = ratings_users_ba.groupby(['region', 'beer_name'])[\"rating\"].mean().reset_index()[\"rating\"]\n",
@@ -3764,13 +4014,15 @@
     "\n",
     "# merge the dataframes to get the top 3 beers in each region for both websites\n",
     "regional_analysis = pd.merge(top_beers_ba, top_beers_rb, on=['region', 'beer_name'], how='outer')\n",
+    "regional_analysis = pd.merge(regional_analysis, total_counts_per_region, on='region')\n",
     "regional_analysis = regional_analysis.fillna(0)\n",
     "regional_analysis['counts_pop_beers']=regional_analysis['counts_ba']+regional_analysis['counts_rb']\n",
+    "regional_analysis['percentage_pop_beers']=(regional_analysis['counts_pop_beers'])/regional_analysis['total_counts']\n",
     "\n",
     "#calculate the weighted average rating of the top 3 beers in each region\n",
     "regional_analysis['rating_pop_beers']=(regional_analysis['rating_ba']*regional_analysis['counts_ba'] + regional_analysis['rating_rb']*regional_analysis['counts_rb'])/regional_analysis['counts_pop_beers']\n",
     "regional_analysis = regional_analysis.sort_values(by=['region','rating_pop_beers'], ascending=False)\n",
-    "regional_analysis = regional_analysis.drop(columns=['counts_ba', 'counts_rb','rating_ba','rating_rb'])\n",
+    "regional_analysis = regional_analysis.drop(columns=['counts_ba', 'counts_rb','rating_ba','rating_rb','total_counts_ba','total_counts_rb','percentage_ba','percentage_rb'])\n",
     "\n",
     "\n",
     "# retrieve the top 3 beers in each region\n",
@@ -3803,12 +4055,12 @@
     "regional_styles['rank'] = regional_styles.groupby('region').cumcount()+1\n",
     "# merge the popular beers and styles in each region\n",
     "regional_analysis = pd.merge(regional_analysis, regional_styles, on=['region',\"rank\"], how='outer', suffixes=('_beers', '_styles'))\n",
-    "regional_analysis.head()\n"
+    "regional_analysis\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4743,6 +4995,27 @@
     "\n",
     "# Show the map\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['US', 'South America', 'North America', 'Europe', 'Australia',\n",
+       "       'Asia', 'Africa'], dtype=object)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regional_analysis['region'].unique()"
    ]
   },
   {
