update regional analysis

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4572,7 +4572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -4586,13 +4586,13 @@
          "geo": "geo",
          "hovertemplate": "<b>%{hovertext}</b><br><br>latitude=%{lat}<br>longitude=%{lon}<extra></extra>",
          "hovertext": [
-          "Region: US<br>Rank: 1<br>Popular Beer: Pale Ale (Count: 1604.00, Rating: 0.60)<br>Popular Style: India Pale Ale (IPA) (Count: 1138.00, Rating: 0.69)<br>Region: US<br>Rank: 2<br>Popular Beer: IPA (Count: 845.00, Rating: 0.59)<br>Popular Style: Imperial IPA (Count: 581.00, Rating: 0.61)<br>Region: US<br>Rank: 3<br>Popular Beer: Trappistes 10 (Count: 66.00, Rating: 0.53)<br>Popular Style: American Pale Ale (Count: 538.00, Rating: 0.57)",
-          "Region: South America<br>Rank: 1<br>Popular Beer: Americana Sul (Count: 2.00, Rating: 0.44)<br>Popular Style: Extra Special / Strong Bitter (ESB) (Count: 33.00, Rating: 0.71)<br>Region: South America<br>Rank: 2<br>Popular Beer: ESB (Count: 33.00, Rating: 0.33)<br>Popular Style: American Double / Imperial IPA (Count: 15.00, Rating: 0.59)<br>Region: South America<br>Rank: 3<br>Popular Beer: English Pale Ale (Count: 8.00, Rating: 0.29)<br>Popular Style: American IPA (Count: 19.00, Rating: 0.29)",
-          "Region: North America<br>Rank: 1<br>Popular Beer: Oatmeal Stout (Count: 256.00, Rating: 0.60)<br>Popular Style: Saison / Farmhouse Ale (Count: 682.00, Rating: 0.63)<br>Region: North America<br>Rank: 2<br>Popular Beer: Lager (Count: 10.00, Rating: 0.49)<br>Popular Style: Sour/Wild Ale (Count: 195.00, Rating: 0.62)<br>Region: North America<br>Rank: 3<br>Popular Beer: Saison (Count: 353.00, Rating: 0.44)<br>Popular Style: American Pale Ale (APA) (Count: 307.00, Rating: 0.62)",
-          "Region: Europe<br>Rank: 1<br>Popular Beer: Trappistes 10 (Count: 16.00, Rating: 0.69)<br>Popular Style: Golden Ale/Blond Ale (Count: 119.00, Rating: 0.76)<br>Region: Europe<br>Rank: 2<br>Popular Beer: IPA (Count: 435.00, Rating: 0.62)<br>Popular Style: American IPA (Count: 791.00, Rating: 0.71)<br>Region: Europe<br>Rank: 3<br>Popular Beer: Oatmeal Stout (Count: 128.00, Rating: 0.43)<br>Popular Style: Bitter (Count: 121.00, Rating: 0.62)",
-          "Region: Australia<br>Rank: 1<br>Popular Beer: Hefeweizen (Count: 62.00, Rating: 0.70)<br>Popular Style: Bitter (Count: 1.00, Rating: 0.67)<br>Region: Australia<br>Rank: 2<br>Popular Beer: Delirium Tremens (Count: 1.00, Rating: 0.67)<br>Popular Style: Hefeweizen (Count: 62.00, Rating: 0.63)<br>Region: Australia<br>Rank: 3<br>Popular Beer: Blonde Natural (Count: 1.00, Rating: 0.49)<br>Popular Style: American Pale Ale (APA) (Count: 70.00, Rating: 0.60)",
-          "Region: Asia<br>Rank: 1<br>Popular Beer: Ale Australian (Count: 1.00, Rating: 0.56)<br>Popular Style: Pilsener (Count: 3.00, Rating: 0.73)<br>Region: Asia<br>Rank: 2<br>Popular Beer: Pale Ale (Count: 67.00, Rating: 0.49)<br>Popular Style: English Pale Ale (Count: 73.00, Rating: 0.72)<br>Region: Asia<br>Rank: 3<br>Popular Beer: Ale Whale (Count: 1.00, Rating: 0.49)<br>Popular Style: Spice/Herb/Vegetable (Count: 3.00, Rating: 0.67)",
-          "Region: Africa<br>Rank: 1<br>Popular Beer: 7 Léopold (Count: 1.00, Rating: 0.94)<br>Popular Style: Belgian Pale Ale (Count: 1.00, Rating: 0.94)"
+          "Region: US<br>Rank: 1<br>Popular Beer: Oktoberfest (Count: 1030.00, Rating: 0.56)<br>Popular Style: Classic English-Style Pale Ale (Count: 1674.00, Rating: 0.63)<br>Region: US<br>Rank: 2<br>Popular Beer: Pale Ale (Count: 660.00, Rating: 0.62)<br>Popular Style: American IPA (Count: 3336.00, Rating: 0.57)<br>Region: US<br>Rank: 3<br>Popular Beer: India Pale Ale (Count: 435.00, Rating: 0.68)<br>Popular Style: American Imperial Stout (Count: 863.00, Rating: 0.56)",
+          "Region: South America<br>Rank: 1<br>Popular Beer: ESB (Count: 33.00, Rating: 0.82)<br>Popular Style: Classic English-Style Pale Ale (Count: 15.00, Rating: 0.67)<br>Region: South America<br>Rank: 2<br>Popular Beer: English Pale Ale (Count: 8.00, Rating: 0.75)<br>Popular Style: Ordinary Bitter (Count: 33.00, Rating: 0.59)<br>Region: South America<br>Rank: 3<br>Popular Beer: Strong Scotch Ale (Count: 2.00, Rating: 0.78)<br>Popular Style: American IPA (Count: 19.00, Rating: 0.55)",
+          "Region: North America<br>Rank: 1<br>Popular Beer: Saison (Count: 126.00, Rating: 0.56)<br>Popular Style: American Pale Ale (Count: 307.00, Rating: 0.71)<br>Region: North America<br>Rank: 2<br>Popular Beer: Oktoberfest (Count: 103.00, Rating: 0.56)<br>Popular Style: Belgian-Style Saison (Count: 940.00, Rating: 0.62)<br>Region: North America<br>Rank: 3<br>Popular Beer: Oktoberfest (Count: 103.00, Rating: 0.44)<br>Popular Style: Scottish-Style Light Ale (Count: 231.00, Rating: 0.61)",
+          "Region: Europe<br>Rank: 1<br>Popular Beer: IPA (Count: 240.00, Rating: 0.66)<br>Popular Style: Classic English-Style Pale Ale (Count: 271.00, Rating: 0.76)<br>Region: Europe<br>Rank: 2<br>Popular Beer: Pale Ale (Count: 66.00, Rating: 0.55)<br>Popular Style: English-Style Bitter (Count: 131.00, Rating: 0.69)<br>Region: Europe<br>Rank: 3<br>Popular Beer: Oatmeal Stout (Count: 64.00, Rating: 0.61)<br>Popular Style: American IPA (Count: 791.00, Rating: 0.61)",
+          "Region: Australia<br>Rank: 1<br>Popular Beer: Pale Ale (Count: 66.00, Rating: 0.62)<br>Popular Style: Blonde Ale (Count: 29.00, Rating: 0.72)<br>Region: Australia<br>Rank: 2<br>Popular Beer: Hefeweizen (Count: 62.00, Rating: 0.50)<br>Popular Style: Classic English-Style Pale Ale (Count: 5.00, Rating: 0.67)<br>Region: Australia<br>Rank: 3<br>Popular Beer: Golden Ale (Count: 27.00, Rating: 0.50)<br>Popular Style: German-Style Hefeweizen (Count: 62.00, Rating: 0.63)",
+          "Region: Asia<br>Rank: 1<br>Popular Beer: Pale Ale (Count: 66.00, Rating: 0.44)<br>Popular Style: American Pale Ale (Count: 3.00, Rating: 0.73)<br>Region: Asia<br>Rank: 2<br>Popular Beer: Hefeweizen (Count: 62.00, Rating: 0.61)<br>Popular Style: English-Style Brown Porter (Count: 35.00, Rating: 0.71)<br>Region: Asia<br>Rank: 3<br>Popular Beer: Porter (Count: 34.00, Rating: 0.41)<br>Popular Style: English-Style Pale Ale (ESB) (Count: 73.00, Rating: 0.62)",
+          "Region: Africa<br>Rank: 1<br>Popular Beer: Léopold 7 (Count: 1.00, Rating: 0.96)<br>Popular Style: Belgian-Style Blonde Ale (Count: 1.00, Rating: 0.96)<br>Region: Africa<br>Rank: 2<br>Popular Beer: Léopold 7 (Count: 1.00, Rating: 0.94)<br>Popular Style: Belgian-Style Pale Ale (Count: 1.00, Rating: 0.94)"
          ],
          "lat": [
           37.0902,
@@ -5476,7 +5476,7 @@
     "    lambda x: \"<br>\".join(\n",
     "        f\"Region: {row['region']}<br>\"\n",
     "        f\"Rank: {row['rank']}<br>\"\n",
-    "        f\"Popular Beer: {row['popular_beers']} (Count: {row['counts_pop_beers']:.2f}, Rating: {row['rating_pop_beers']:.2f})<br>\"\n",
+    "        f\"Popular Beer: {row['popular_beers_name']} (Count: {row['counts_pop_beers']:.2f}, Rating: {row['rating_pop_beers']:.2f})<br>\"\n",
     "        f\"Popular Style: {row['popular_styles']} (Count: {row['counts_pop_styles']:.2f}, Rating: {row['rating_pop_styles']:.2f})\"\n",
     "        for idx, row in x.iterrows()\n",
     "    )\n",
