update keyword analysis

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -6131,7 +6131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6152,12 +6152,17 @@
     "    for review in beer_name_reviews_ba:\n",
     "        words = word_tokenize(review.lower())\n",
     "        nltk_stopwords = set(stopwords.words('english'))\n",
+    "        # manually add uninformativewords to stopwords\n",
+    "        uninformativewords = ['nice','good','great','little','full']\n",
+    "        nltk_stopwords.update(uninformativewords)\n",
     "        words = [word for word in words if word.isalpha() and word not in nltk_stopwords]\n",
     "        tagged = pos_tag(words)\n",
     "        adjectives_ba.extend([word for word, tag in tagged if tag in ['JJ', 'JJR', 'JJS']])\n",
     "    for review in beer_name_reviews_rb:\n",
     "        words = word_tokenize(review.lower())\n",
     "        nltk_stopwords = set(stopwords.words('english'))\n",
+    "        uninformativewords = ['nice','good','great','little','full']\n",
+    "        nltk_stopwords.update(uninformativewords)\n",
     "        words = [word for word in words if word.isalpha() and word not in nltk_stopwords]\n",
     "        tagged = pos_tag(words)\n",
     "        adjectives_rb.extend([word for word, tag in tagged if tag in ['JJ', 'JJR', 'JJS']])\n",
@@ -6182,12 +6187,16 @@
     "    for review in style_reviews_ba:\n",
     "        words = word_tokenize(review.lower())\n",
     "        nltk_stopwords = set(stopwords.words('english'))\n",
+    "        uninformativewords = ['nice','good','great','little','full']\n",
+    "        nltk_stopwords.update(uninformativewords)\n",
     "        words = [word for word in words if word.isalpha() and word not in nltk_stopwords]\n",
     "        tagged = pos_tag(words)\n",
     "        adjectives_ba.extend([word for word, tag in tagged if tag in ['JJ', 'JJR', 'JJS']])\n",
     "    for review in style_reviews_rb:\n",
     "        words = word_tokenize(review.lower())\n",
     "        nltk_stopwords = set(stopwords.words('english'))\n",
+    "        uninformativewords = ['nice','good','great','little','full']\n",
+    "        nltk_stopwords.update(uninformativewords)\n",
     "        words = [word for word in words if word.isalpha() and word not in nltk_stopwords]\n",
     "        tagged = pos_tag(words)\n",
     "        adjectives_rb.extend([word for word, tag in tagged if tag in ['JJ', 'JJR', 'JJS']])\n",
@@ -6215,7 +6224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -6267,7 +6276,7 @@
        "      <td>336</td>\n",
        "      <td>0.862257</td>\n",
        "      <td>1</td>\n",
-       "      <td>[dark, brown, sweet, nice, good, great, comple...</td>\n",
+       "      <td>[dark, brown, sweet, complex, best, finish, ri...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6282,7 +6291,7 @@
        "      <td>260</td>\n",
        "      <td>0.857528</td>\n",
        "      <td>2</td>\n",
-       "      <td>[black, dark, good, finish, nice, sweet, great...</td>\n",
+       "      <td>[black, dark, finish, sweet, bitter, brown, st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6297,7 +6306,7 @@
        "      <td>249</td>\n",
        "      <td>0.788674</td>\n",
        "      <td>3</td>\n",
-       "      <td>[black, dark, nice, good, sweet, little, finis...</td>\n",
+       "      <td>[black, dark, sweet, finish, bitter, brown, cr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6312,7 +6321,7 @@
        "      <td>154</td>\n",
        "      <td>0.730559</td>\n",
        "      <td>4</td>\n",
-       "      <td>[white, golden, good, belgian, nice, light, fi...</td>\n",
+       "      <td>[white, golden, belgian, light, finish, sweet,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6327,7 +6336,7 @@
        "      <td>149</td>\n",
        "      <td>0.801296</td>\n",
        "      <td>5</td>\n",
-       "      <td>[nice, white, good, light, bitter, golden, gre...</td>\n",
+       "      <td>[white, light, golden, bitter, finish, hoppy, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6356,14 +6365,14 @@
        "4  India Pale Ale (IPA)       100.0   Classic English-Style Pale Ale    149   \n",
        "\n",
        "     rating  rank                                           keywords  \n",
-       "0  0.862257     1  [dark, brown, sweet, nice, good, great, comple...  \n",
-       "1  0.857528     2  [black, dark, good, finish, nice, sweet, great...  \n",
-       "2  0.788674     3  [black, dark, nice, good, sweet, little, finis...  \n",
-       "3  0.730559     4  [white, golden, good, belgian, nice, light, fi...  \n",
-       "4  0.801296     5  [nice, white, good, light, bitter, golden, gre...  "
+       "0  0.862257     1  [dark, brown, sweet, complex, best, finish, ri...  \n",
+       "1  0.857528     2  [black, dark, finish, sweet, bitter, brown, st...  \n",
+       "2  0.788674     3  [black, dark, sweet, finish, bitter, brown, cr...  \n",
+       "3  0.730559     4  [white, golden, belgian, light, finish, sweet,...  \n",
+       "4  0.801296     5  [white, light, golden, bitter, finish, hoppy, ...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6382,7 +6391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -6420,7 +6429,7 @@
        "      <td>3044.0</td>\n",
        "      <td>0.699682</td>\n",
        "      <td>1</td>\n",
-       "      <td>[nice, good, white, light, finish, sweet, grea...</td>\n",
+       "      <td>[white, light, finish, sweet, dry, golden, mod...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6428,7 +6437,7 @@
        "      <td>2101.0</td>\n",
        "      <td>0.713227</td>\n",
        "      <td>2</td>\n",
-       "      <td>[white, nice, good, light, finish, dry, great,...</td>\n",
+       "      <td>[white, light, finish, dry, golden, floral, sw...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6436,7 +6445,7 @@
        "      <td>1942.0</td>\n",
        "      <td>0.672628</td>\n",
        "      <td>3</td>\n",
-       "      <td>[nice, good, white, light, pale, finish, sweet...</td>\n",
+       "      <td>[white, light, pale, finish, sweet, golden, fl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6444,7 +6453,7 @@
        "      <td>1867.0</td>\n",
        "      <td>0.753514</td>\n",
        "      <td>4</td>\n",
-       "      <td>[black, dark, good, nice, finish, sweet, light...</td>\n",
+       "      <td>[black, dark, finish, sweet, light, brown, big...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6452,7 +6461,7 @@
        "      <td>1657.0</td>\n",
        "      <td>0.697932</td>\n",
        "      <td>5</td>\n",
-       "      <td>[good, nice, white, light, finish, sweet, grea...</td>\n",
+       "      <td>[white, light, finish, sweet, bitter, moderate...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6467,14 +6476,14 @@
        "4                    American IPA  1657.0  0.697932     5   \n",
        "\n",
        "                                            keywords  \n",
-       "0  [nice, good, white, light, finish, sweet, grea...  \n",
-       "1  [white, nice, good, light, finish, dry, great,...  \n",
-       "2  [nice, good, white, light, pale, finish, sweet...  \n",
-       "3  [black, dark, good, nice, finish, sweet, light...  \n",
-       "4  [good, nice, white, light, finish, sweet, grea...  "
+       "0  [white, light, finish, sweet, dry, golden, mod...  \n",
+       "1  [white, light, finish, dry, golden, floral, sw...  \n",
+       "2  [white, light, pale, finish, sweet, golden, fl...  \n",
+       "3  [black, dark, finish, sweet, light, brown, big...  \n",
+       "4  [white, light, finish, sweet, bitter, moderate...  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
